--- a/team7/main/templates/placeRegist.html
+++ b/team7/main/templates/placeRegist.html
@@ -15,6 +15,19 @@
         <input type = "text" name = "placeDistrict" placeholder = "시/군/구"></br>
         <input type = "text" name = "placeStreet" placeholder = "도로명">
         <input type = "text" name = "placeAddress" placeholder = "상세주소">
+        <h4>해당하는 카테고리를 선택하세요.</h4>
+        <table border = "1">
+            <th>체크</th>
+            <th>카테고리명</th>
+            {% for rows in list %}
+            <tr>
+                <td><input type="checkbox" name = "categories[]" id = "{{rows.0}}" value = "{{rows.0}}"></td>
+                <td><label for = "{{rows.0}}">{{rows.0}}</label></td>
+            </tr>
+            {% endfor %}
+
+            
+        </table>
         <input type = "submit" value="등록하기">
     </form>
 </body>
