--- a/team7/accounts/templates/login.html
+++ b/team7/accounts/templates/login.html
@@ -8,6 +8,21 @@
     <title>로그인</title>
   </head>
 
-  <body></body>
+  <body>
+    <form action="" method="post">
+      <div>
+        <label for="username">
+          아이디:
+        </label>
+        <input type="text" name="username" id="username">
+      </div>
+      <div>
+        <label for="password">
+          비밀번호:
+        </label>
+        <input type="password" name="password" id="password">
+      </div>
+    </form>
+  </body>
 
 </html>
