--- a/team7/accounts/templates/login.html
+++ b/team7/accounts/templates/login.html
@@ -10,6 +10,7 @@
 
   <body>
     <form action="" method="post">
+      {% csrf_token %}
       <div>
         <label for="username">
           아이디:
@@ -22,6 +23,7 @@
         </label>
         <input type="password" name="password" id="password">
       </div>
+      <input type="submit">
     </form>
   </body>
 
