--- a/team7/accounts/templates/login.html
+++ b/team7/accounts/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,27 +6,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <title>로그인</title>
   </head>
 
   <body>
-    <form action="" method="post">
+    <form action="" method="post" class='container'>
+      <h3 class='text-center mt-3'>로그인</h3>
+      <hr>
       {% csrf_token %}
       <div>
-        <label for="username">
+        <label for="username" class='form-label'>
           아이디:
         </label>
-        <input type="text" name="username" id="username">
+        <input type="text" name="username" id="username" class='form-control'>
       </div>
       <div>
-        <label for="password">
+        <label for="password" class='form-label'>
           비밀번호:
         </label>
-        <input type="password" name="password" id="password">
+        <input class='form-control' type="password" name="password" id="password">
       </div>
-      <input type="submit">
+      <div class='container mt-3'>
+        <div class='row'>
+          <input type="submit" value='로그인' class='btn btn-info'>
+        </div>
+      </div>
     </form>
-    <a href='{% url 'register' %}'>회원가입</a>
+    <div class='container'>
+      <a href='{% url 'register' %}'>회원가입</a>
+    </div>
   </body>
 
 </html>
