--- a/team7/accounts/templates/register.html
+++ b/team7/accounts/templates/register.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,61 +6,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <title>회원가입</title>
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
   </head>
 
   <body>
-    <form action="{% url 'create_user' %}" method="post">
+    <form class='container' action="{% url 'create_user' %}" method="post">
+      <h3 class='text-center mt-3'>회원가입</h3>
+      <hr>
       {% csrf_token %}
       <div>
-        <label for="username">
+        <label for="username" class='form-label'>
           아이디:
         </label>
-        <input type="text" name="username" id="username">
+        <input type="text" name="username" id="username" class='form-control'>
       </div>
       <div>
-        <label for="password">
+        <label for="password" class='form-label'>
           비밀번호:
         </label>
-        <input type="password" name="password" id="password">
-        <label for="password">
+        <input type="password" name="password" id="password" class='form-control'>
+        <label for="password" class='form-label'>
           비밀번호 확인:
         </label>
-        <input type="password" name="password-check" id="password-check">
+        <input type="password" class='form-control' name="password-check" id="password-check">
       </div>
-      <div>
-        <label>이름:
-        </label>
-        <input type="text" name="first-name" id="first-name" placeholder="ex) 길동">
-        <input type="text" name="last-name" id="last-name" placeholder="ex) 홍">
+      <div class='container'>
+        <label class='form-label row'>이름:</label>
+        <div class='row'>
+          <input class='form-control col me-1' type="text" name="first-name" id="first-name" placeholder="ex) 길동">
+          <input class='form-control col ms-1' type="text" name="last-name" id="last-name" placeholder="ex) 홍">
+        </div>
       </div>
-      <div>
-        <label for="sex">성별:
-        </label>
-        <select name="sex" id="sex">
+      <div class='container px-0 mb-3'>
+        <label class='form-label' for="sex">성별:</label>
+        <select class='form-select' name="sex" id="sex">
           <option value="M">남</option>
           <option value="F">여</option>
         </select>
       </div>
-      <div>
-        <label for="is-invited">
-          이미 커플을 생성했어요
+      <hr>
+      <div class='mt-3'>
+        <label class='form-label' for="is-invited">
+          <span class='fs-6' style='color: gray;'>※ 이미 커플을 생성하셨나요? ※</span>
           <input type="checkbox" id='is-invited-btn' checked="checked" onclick='code_toggle()'>
         </label>
-        <input type="hidden" name="is-invited" id="is-invited" value="1">
-        <div id='code-or-create'>
-          <label for="couple-id" id="id">코드:
-          </label>
-          <input type="text" id='couple-id' name='couple-id'>
+        <input class='form-check' type="hidden" name="is-invited" id="is-invited" value="1">
+        <div id='code-or-create' class='container mb-3'>
+          <div class='row'>
+            <label class='form-label col-3' for="couple-id" id="id">커플 코드:
+            </label>
+            <input class='form-control col' type="text" id='couple-id' name='couple-id'>
+          </div>
         </div>
-        <div id='new-couple' style='display:none;'>
-          <label for="start-date">1일 날짜:</label>
-          <input type="date" id='start-date' name='start-date'>
+        <div class='container mb-3' id='new-couple' style='display:none;'>
+          <div class='row'>
+            <label for="start-date" class='col-3 form-label'>1일 날짜:</label>
+            <input class='form-control col' type="date" id='start-date' name='start-date'>
+          </div>
         </div>
-        <input type="submit">
+        <div class='container'>
+          <div class='row'>
+            <input type="submit" value='회원가입' class='btn btn-info'>
+          </div>
+        </div>
       </form>
-      <a href="{% url 'shop-register' %}">점포 주인이신가요?</a>
+      <div>
+        <a href="{% url 'shop-register' %}">점포 주인이신가요?</a>
+      </div>
       <script>
         function code_toggle() {
           const div = document.getElementById("code-or-create");
