--- a/team7/main/templates/placeDetail.html
+++ b/team7/main/templates/placeDetail.html
@@ -31,6 +31,12 @@
         </tr>
         {% endfor %}
     </table>
+    <h4>댓글 작성하기</h4>
+    <form action = {%url 'placeCommentRegist' placeid %} method="post">
+        {% csrf_token %}
+        <input type = "text", name = "comment_txt", placeholder = "댓글을 입력하세요">
+        <input type = "submit", value = "등록">
+    </form>
     <form action = "{% url "index" %}" method = "POST">
         {% csrf_token %}
         <input type = "submit" value="홈으로">
