--- a/team7/main/templates/placeRegist.html
+++ b/team7/main/templates/placeRegist.html
@@ -109,7 +109,7 @@
           itemStr += '    <span class="col">' + places.address_name + '</span>';
         }
 
-        itemStr += '<input type="radio" id="place" value="' + index + '" onclick="place_select()">'
+        itemStr += '<input type="radio" name="place" id="place" value="' + index + '" onclick="place_select()">'
 
         itemStr += '</div>';
 
