--- a/team7/main/templates/placeRegist.html
+++ b/team7/main/templates/placeRegist.html
@@ -15,21 +15,31 @@
   <body>
     <form class='container justify-item-center' action="{% url "placeRegSubmit" %}" method="POST">
       {% csrf_token %}
-      <div id='menu-wrap' class="card row" style="width: 18rem;">
-        <div class="card-header">
-          검색:
-          <input type="text" class='form-control' placeholder='주소 또는 점포 이름 입력' id='place-search' size='15'>
-          <button type='button' class='btn btn-info' onclick="searchPlaces(); return false;">검색</button>
+      <div class='container my-2'>
+        <div id='menu-wrap' class="card container" style="">
+          <div class="card-header row">
+            <span class='col-2'>검색:</span>
+            <input type="text" class='form-control col' placeholder='주소 또는 점포 이름을 입력하여 등록할 장소를 찾아보세요!' id='place-search' size='15'>
+            <button type='button' class='btn btn-info col-2' onclick="searchPlaces(); return false;">검색</button>
+          </div>
+          <ul class="list-group list-group-flush" id="search-places"></ul>
+          <div id='pagination'></div>
         </div>
-        <ul class="list-group list-group-flush" id="search-places"></ul>
-        <div id='pagination'></div>
+        <input type="hidden" id="place-name" name="placeName">
+        <input type="hidden" id="place-address" name="placeTotalAddress">
       </div>
-      <input type="hidden" id="place-name" name="placeName">
-      <input type="hidden" id="place-address" name="placeTotalAddress">
 
-      <div class='row'>
-        <h4>해당하는 카테고리를 선택하세요.</h4>
-        <table border="1">
+      <div class='row my-2'>
+        <h5>선택한 장소에 맞는 카테고리를 선택하세요!</h5>
+        {% comment %} <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group"> {% endcomment %}
+          <div class="container">
+            {% for rows in list %}
+            <input type="checkbox" class="btn-check" name="categories[]" id="{{rows.0}}" value="{{rows.0}}">
+            <label class="btn btn-outline-primary mx-1" for="{{rows.0}}">{{rows.0}}</label>
+          {% endfor %}
+          </div>
+        {% comment %} </div> {% endcomment %}
+        {% comment %} <table border="1">
           <th>체크</th>
           <th>카테고리명</th>
           {% for rows in list %}
@@ -41,8 +51,8 @@
             </tr>
           {% endfor %}
 
-        </table>
-        <input type="submit" value="등록하기">
+        </table> {% endcomment %}
+        <input class='my-3 btn btn-primary' type="submit" value="등록하기">
       </div>
     </form>
     <script>
@@ -83,7 +93,6 @@
 
       function displayPlaces(places) {
         var listEl = document.getElementById('search-places'),
-          menuEl = document.getElementById('menu_wrap'),
           fragment = document.createDocumentFragment(),
           listStr = '';
 
@@ -96,22 +105,21 @@
         }
 
         listEl.appendChild(fragment);
-        menuEl.scrollTop = 0;
       }
 
       function getListItem(index, places) {
         var el = document.createElement('li'),
-          itemStr = '<div class="container" id="place' + index + '">' + '   <h5 class="row">' + places.place_name + '</h5>' + '<div class="row"> 주소:';
+          itemStr = '<div class="container" id="place' + index + '">' + ' <div class="col">  <h5 class="row">' + places.place_name + '</h5>' + '<div class="row"> 주소:';
 
         if (places.road_address_name) {
-          itemStr += '    <span class="col">' + places.road_address_name + '</span>';
+          itemStr += '    <span class="col">' + places.road_address_name + '</span></div>';
         } else {
-          itemStr += '    <span class="col">' + places.address_name + '</span>';
+          itemStr += '    <span class="col">' + places.address_name + '</span></div>';
         }
 
-        itemStr += '<input type="radio" name="place" id="place" value="' + index + '" onclick="place_select()">'
+        itemStr += '<div class="col justify-item-end text-end"><input class="text-end" type="radio" name="place" id="place" value="' + index + '" onclick="place_select()">'
 
-        itemStr += '</div>';
+        itemStr += '</div></div>';
 
         el.innerHTML = itemStr;
         el.className = 'list-group-item';
@@ -127,8 +135,8 @@
 
       function place_select() {
         const selected = $(':input:radio[id="place"]:checked').val();
-        const placename_val = $('#place' + selected + ' > h5').html();
-        const placeaddress_val = $('#place' + selected + ' > div > span').html();
+        const placename_val = $('#place' + selected + ' > div > h5').html();
+        const placeaddress_val = $('#place' + selected + '> div > div > span').html();
         const placename = document.getElementById("place-name");
         const placeaddress = document.getElementById("place-address");
         console.log(placeaddress_val);
