--- a/team7/main/templates/registComplete.html
+++ b/team7/main/templates/registComplete.html
@@ -1,16 +1,20 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>complete</title>
-</head>
-<body>
-    <form action = "{% url "index" %}" method = "POST">
-        {% csrf_token %}
-        <input type = "submit" value="홈으로">
-    </form>
-    <h3>등록이 완료되었습니다.</h3>
-</body>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <title>등록 완료</title>
+  </head>
+
+  <body class='text-center'>
+    <h3 class='my-3'>등록이 완료되었습니다.</h3>
+    <a href="{% url 'index' %}" class='text-decoration-none'>
+      <button class='btn btn-primary' type="button">홈으로</button>
+    </a>
+  </body>
+
 </html>
