--- a/team7/main/templates/base.html
+++ b/team7/main/templates/base.html
@@ -47,7 +47,7 @@
               {{user.username}}님
             </a>
           {% else %}
-            <a href='{% url 'menu_regist' %}'>
+            <a href='{% url 'menuRegist' %}'>
               메뉴 등록
             </a>
           {% endif %}
