--- a/team7/main/templates/placeDetail.html
+++ b/team7/main/templates/placeDetail.html
@@ -1,39 +1,89 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <title>장소 상세</title>
-</head>
-<body>
+  </head>
+
+  <body class='text-center justify-content-center align-item-center'>
+
     {%for rows in list1%}
-        <h3>{{rows.0}}에 대한 상세 페이지입니다.</h3>
-        <h4>주소 정보</h4>
-        <h5>{{rows.1}} {{rows.2}} {{rows.3}} {{rows.4}}</h5>
-        <h4>카테고리</h4>
-        {%for rows2 in list2%}
-            {{rows2.0}} 
-        {% endfor %}
+      <h5 class='m-0 p-3 bg-info'>{{rows.0}}</h5>
+      {% if is_shop %}
+        <button class='my-2 btn btn-primary'>등록 점포✅</button>
+      {% endif %}
+      <div class='mt-2'>
+        {{rows.1}}
+        {{rows.2}}
+        {{rows.3}}
+        {{rows.4}}
+      </div>
+      <div>
+        Tel.{{tel.0}}
+      </div>
     {% endfor %}
-    <h3>등록된 댓글들</h3>
-    <table border = "1">
-        <th>순번</th>
-        <th>내용</th>
-        <th>작성자</th>
-        <th>작성일시</th>
-        {% for rows in list3 %}
-        <tr>
-            <td>{{forloop.counter}}</td>
-            <td>{{rows.0}}</td>
-            <td>{{rows.1}}</td>
-            <td>{{rows.2}}</td>
-        </tr>
+
+    <div class='mt-2'>
+      {%for rows2 in list2%}
+        <button type='button' class='btn btn-outline-primary mx-1'>{{rows2.0}}</button>
+      {% endfor %}
+    </div>
+    <hr>
+    {% if is_shop %}
+      <h5 class='mt-3'>메뉴</h5>
+      <div class='d-flex flex-column align-items-center justify-content-center'>
+        {% for menu in menus %}
+          {% if menu.2 is not None %}
+            <div class="card my-1" style="width: 18rem;">
+              <img src="{{menu.2}}" class="card-img-top" alt="" height="286">
+              <div class="card-body">
+                <h5 class="card-title">{{menu.0}}</h5>
+                <h6 class="card-subtitle mb-2 text-muted">{{menu.1}}</h6>
+              </div>
+            </div>
+          {% else %}
+
+            <div class="card">
+              <div class="card-body" style="width: 18rem;">
+                <h5 class="card-title">{{menu.0}}</h5>
+                <h6 class="card-subtitle mb-2 text-muted">{{menu.1}}</h6>
+              </div>
+            </div>
+
+          {% endif %}
         {% endfor %}
-    </table>
-    <form action = "{% url "index" %}" method = "POST">
-        {% csrf_token %}
-        <input type = "submit" value="홈으로">
-    </form>
-</body>
+      </div>
+    {% endif %}
+
+    <div class="card text-center mt-2">
+      <div class="card-header">
+        댓글
+      </div>
+      <div class="card-body">
+        <ul class="list-group list-group-flush">
+          {% for rows in list3 %}
+            <li class='list-group-item'>
+              <div class='text-start mx-2 fw-bold'>{{rows.1}}:</div>
+              <div class='text-start mx-2'>{{rows.0}}</div>
+              <div class='text-end mx-5'>{{rows.2|date:'Y-m-d h:i:s'}}</div>
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div class="card-footer text-muted">
+        <form class='row' action="{% url 'placeCommentRegist' placeid %}" method="POST">
+          {% csrf_token %}
+          <label class='col-2 form-label' for="place-comment">댓글:</label>
+          <input type="text" id='place-comment' name='place-comment' class='col form-control'>
+          <input type="submit" value='작성' class='col-2 btn btn-info'>
+        </form>
+      </div>
+    </div>
+  </body>
+
 </html>
