--- a/team7/main/templates/courseDetail.html
+++ b/team7/main/templates/courseDetail.html
@@ -1,53 +1,70 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>코스 디테일</title>
-</head>
-<body>
-    <h3>{{coursename}} 코스의 디테일 페이지 입니다</h3>
-    <h4>코스에 속한 장소들</h4>
-    <table border = "1">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <title>코스</title>
+  </head>
+
+  <body class='text-center justify-content-center align-items-center'>
+    <h5 class='p-3 m-0 bg-info'>{{coursename}}</h5>
+    코스
+    <div>
+      <table class='container' border="1">
         <th>순번</th>
-        <th>이름</th>
+        <th>장소명</th>
         <th>주소</th>
         <th>바로가기</th>
         {% for rows in list1 %}
-        <tr>
+          <tr>
             <td>{{forloop.counter}}</td>
             <td>{{rows.1}}</td>
-            <td>{{rows.2}} {{rows.3}} {{rows.4}} {{rows.5}}</td>
-            <td><a href="{% url 'placeDetail' rows.6 %}"><button>상세보기</button></a></td>
-        </tr>
+            <td>{{rows.2}}
+              {{rows.3}}
+              {{rows.4}}
+              {{rows.5}}</td>
+            <td>
+              <a href="{% url 'placeDetail' rows.6 %}">
+                <button>상세보기</button>
+              </a>
+            </td>
+          </tr>
         {% endfor %}
-    </table>
-    <h4>코스의 댓글</h4>
-    <table border = "1">
-        <th>순번</th>
-        <th>내용</th>
-        <th>작성자</th>
-        <th>작성일시</th>
-        {% for rows in list2 %}
-        <tr>
-            <td>{{forloop.counter}}</td>
-            <td>{{rows.0}}</td>
-            <td>{{rows.1}}</td>
-            <td>{{rows.2}}</td>
-        </tr>
-        {% endfor %}
-        
-    </table>
-    <h4>댓글 작성하기</h4>
-    <form action = {%url 'courseCommentRegist' courseid %} method="post">
-        {% csrf_token %}
-        <input type = "text", name = "comment_txt", placeholder = "댓글을 입력하세요">
-        <input type = "submit", value = "등록">
-    </form>
-    <form action = "{% url "index" %}" method = "POST">
-        {% csrf_token %}
-        <input type = "submit" value="홈으로">
-    </form>
-</body>
+      </table>
+    </div>
+    <div class="card text-center mt-2">
+      <div class="card-header">
+        댓글
+      </div>
+      <div class="card-body">
+        <ul class="list-group list-group-flush">
+          {% for rows in list2 %}
+            <li class='list-group-item'>
+              <div class='text-start mx-2 fw-bold'>{{rows.1}}:</div>
+              <div class='text-start mx-2'>{{rows.0}}</div>
+              <div class='text-end mx-5'>{{rows.2|date:'Y-m-d h:i:s'}}</div>
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div class="card-footer text-muted">
+        <form class='row' action="{% url 'courseCommentRegist' courseid %}" method="POST">
+          {% csrf_token %}
+          <label class='col-2 form-label' for="course-comment">댓글:</label>
+          <input type="text" id='course-comment' name='course-comment' class='col form-control'>
+          <input type="submit" value='작성' class='col-2 btn btn-info'>
+        </form>
+      </div>
+    </div>
+    <div class='my-2'>
+      <a href="{% url 'index' %}">
+        <button class='btn btn-primary'>홈으로</button>
+      </a>
+    </div>
+  </body>
+
 </html>
