일기 작성 및 확인 구현 완료

--- a/team7/main/templates/base.html
+++ b/team7/main/templates/base.html
@@ -30,6 +30,9 @@
               <li class='nav-item'>
                 <a class='nav-link' href="{% url 'courseRegist' %}">코스 등록</a>
               </li>
+              <li class='nav-item'>
+                <a class='nav-link' href="{% url 'diaryWrite' %}">커플 한 줄 일기 작성</a>
+              </li>
             </ul>
             <a class='d-flex text-decoration-none' href="{% url 'courseSearch' %}">
               <input class="form-control me-2" type="search" placeholder='코스 검색' aria-label="Search">
