--- a/team7/main/templates/index.html
+++ b/team7/main/templates/index.html
@@ -23,13 +23,15 @@
     <h5>내 다이어리</h5>
     <div data-bs-spy='scroll' data-bs-root-margin='0px 0px -40%' data-bs-smooth-scroll='true' class='scrollspy-example bg-light p-3 rounded-2' tabindex='0'>
       {% for rows in list2 %}
-        <div class='card' style='width: 100%;'>
-          <div class='card-body d-flex'>
-            <div class='flex-fill text-center'>{{ forloop.counter }}</div>
-            <div class='flex-fill text-center'>{{ rows.0 }}</div>
-            <div class='flex-fill text-center'>{{ rows.1|date:"Y/m/d(D) h:i:s" }}</div>
+        <a class='text-decoration-none' href="{% url 'diaryDetail' rows.2 %}">
+          <div class='card' style='width: 100%;'>
+            <div class='card-body d-flex'>
+              <div class='flex-fill text-center'>{{ forloop.counter }}</div>
+              <div class='flex-fill text-center'>{{ rows.0 }}</div>
+              <div class='flex-fill text-center'>{{ rows.1|date:"Y/m/d(D) h:i:s" }}</div>
+            </div>
           </div>
-        </div>
+        </a>
       {% endfor %}
     </div>
   {% else %}
