--- a/team7/main/templates/placeDetail.html
+++ b/team7/main/templates/placeDetail.html
@@ -36,6 +36,17 @@
       {% endfor %}
     </div>
     <hr>
+    <div class='container justify-content-center align-items-center'>
+      <h5 class='mt-3'>
+        사진
+      </h5>
+      {% for img in imgs %}
+        <div class="card my-1" style="width: 18rem;">
+          <img src="{{img.0}}" alt="286">
+        </div>
+      {% endfor %}
+    </div>
+    <hr>
     {% if is_shop %}
       <h5 class='mt-3'>메뉴</h5>
       <div class='d-flex flex-column align-items-center justify-content-center'>
